# Collaborative-Document-Editor

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  run.sh
.github/workflows/: ci.yml
_archive/playground/: Makefile  compile_commands.json  playground_crdt
_archive/playground/.devcontainer/: Dockerfile  devcontainer.json
_archive/playground/include/: server.h
_archive/playground/src/: main.c  server.c
_archive/tests/: QUICKSTART.md  README.md  run-cpp-tests.sh  run-js-generator.sh
_archive/tests/bot_simulation/: benchmark_scale.js  package-lock.json  package.json  simulate_edits.js
_archive/tests/cpp-delta-consumer/: Makefile  test-deltas  test-deltas.cpp  test-runner.sh
_archive/tests/js-delta-generator/: package.json
_archive/v1/: .dockerignore  DOCKER.md  Dockerfile  README.md  crdt_server.cpp  main.cpp  manual-build-test.sh  run-dev.sh  sync_example.cpp  yffi_test.c
_archive/v2/: docker-compose.yml  run.sh
_archive/v2/server/: CMakeLists.txt  README.md  crdt_server
_archive/v2/server/docs/: COMPLETE.md  REFACTORING.md
_archive/v2/server/include/: document.h  persistence.h  server.h
_archive/v2/server/src/: document.cpp  main.cpp  peer.cpp
archive/: .gitignore  CRDT_SERVER.md  Dockerfile.dev  Makefile  build-interactive.sh  client.cpp  crdt-server  crdt_server  debug-yffi.sh  docker-compose.yml  find-header.sh  host.cpp  inspect-yffi.sh
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/.devcontainer/: devcontainer.json
client/src/: App.tsx  index.css
server/: Dockerfile  Makefile  crdt_server
server/.devcontainer/: devcontainer.json
server/docs/: PROTOCOL_FIX.md
server/include/: document.h  peer.h  protocol.h
server/scripts/: test_client.py
server/src/: document.cpp  main.cpp  peer.cpp  persistence.cpp  protocol.cpp  server.cpp
tests/: run-all-tests.sh
tests/js-delta-generator/: generate-test-deltas.js  package-lock.json  scenarios.js
v2/: .gitignore  PROTOCOL.md  README.md  START_HERE.md
v2/client/: package-lock.json  package.json
v2/server/: Makefile  README.md
web-client/: .env
web-client/src/: App.tsx  index.css  simple-provider.ts  vite-env.d.ts
(+372 files in other folders)
